--- a/index.html
+++ b/index.html
@@ -3,41 +3,55 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-
   <title>Personal Website</title>
   <meta name="description" content="my personal website highlighting my interests and experie">
   <meta name="author" content="Arthur Goldblatt">
 
   <link rel="stylesheet" href="assets/css/style.css?v=1.0">
   <link rel="stylesheet" href="assets/css/nav.css?v=1.0">
+  <link rel="stylesheet" href="assets/css/about.css?v=1.0">
+  <link rel="stylesheet" href="assets/css/exp.css?v=1.0">
+
+
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
 </head>
 
 <body>
-  <script src="assets/js/scripts.js"></script>
-
   <nav role="navigation">
-    <div class="navbar">
-      <div class="line"></div>
-      <div class="line"></div>
-      <div class="line"></div>
+    <div id="navbar">
+      <div class="line" id="bar1"></div>
+      <div class="line" id="bar2"></div>
+      <div class="line" id="bar3"></div>
     </div>
-    <ul class="nav-links">
-      <li><a href="#">About</a></li>
-      <li><a href="#">Experience</a></li>
-      <li><a href="#">Contact</a></li>
+    <ul id="nav-links">
+      <li><a href="#" id="link0">Home</a></li>
+      <li><a href="./about.html" id="link1">About</a></li>
+      <li><a href="./exp.html" id="link2">Experience</a></li>
+      <li><a href="./resume.html" id="link4">Resume</a></li>
     </ul>
   </nav>
 
-  <div class="intro-screen">
-    <div class="intro-text">
+  <div id="intro-screen">
+    <div id="intro-text">
       <p>I'm</p>
-      <div class="name">
-          <p>Arthur Goldblatt</p>
+      <div id="name">
+          <p onmouseover="PlaySound('mySound')" onmouseout="StopSound('mySound')">Arthur Goldblatt</p>
+          <audio id='mySound' src='./Ozymandias.ogg'/>
       </div>
       <p>and this is my personal website.</p>
     </div>
   </div>
+
+  <div class="footer" id="contact">
+    <a href="https://www.linkedin.com/in/arthur-goldblatt-39719285/"><img src="./assets/img/linkedin.png" class="icon-style" alt="linkedin icon"></a>
+    <a href="https://github.com/arthurgoldblatt"><img src="./assets/img/github.jpeg" class="icon-style" alt="Github icon"></a>
+    <a href="mailto:arthurgoldlatt@berkeley.edu"><img src="./assets/img/email.jpeg" class="icon-style" alt="Email icon"></a>
+  </div>
+
+
+<script src="assets/js/script.js"></script>
+
 </body>
+
 </html>
