added padding to bottom for scroll

--- a/exp.html
+++ b/exp.html
@@ -61,7 +61,7 @@
             <li>Python, Java, Go, C, SQL, Lisp, JavaScript, HTML/CSS</li>
           </ul>        </div>
         <div class="exp-img" id="berkeley-img">
-          <img src="./assets/img/berkeley.png" alt="" align=left>
+          <img src="./assets/img/berkeley.png" alt=""
         </div>
       </div>
 
