added meta tag for google search verification

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Personal Website</title>
   <meta name="description" content="my personal website highlighting my interests and experie">
   <meta name="author" content="Arthur Goldblatt">
+  <meta name="google-site-verification" content="ptai00DwXudgUdtQPEv7g-Gk6TIg_jhQn3SG3sbpTwE" />
 
   <link rel="stylesheet" href="assets/css/style.css?v=1.0">
   <link rel="stylesheet" href="assets/css/nav.css?v=1.0">
