chenged website title to Arthur Goldblatt

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Personal Website</title>
+  <title>Arthur Goldblatt</title>
   <meta name="description" content="my personal website highlighting my interests and experie">
   <meta name="author" content="Arthur Goldblatt">
   <meta name="google-site-verification" content="ptai00DwXudgUdtQPEv7g-Gk6TIg_jhQn3SG3sbpTwE" />
