update resume and other basic changes

--- a/about.html
+++ b/about.html
@@ -35,8 +35,8 @@
   <div class="about" id = "about" class="anchor">
     <div id="about-text">
       <h1>About.</h1>
-      <p> I am currently a Junior studying Electrical Engineering and Computer Science at UC Berkeley. My studies include machine learning, computer security, data science, and web development.
-      Outside of my studies, my interests range from skiing to reading. The last book I read was Crime and Punishment. My favorite movie is the Departed. My favorite poem is Ozymandias (if you scroll over
+      <p> I am currently a Senior studying Electrical Engineering and Computer Science at UC Berkeley. My studies include machine learning, computer security, data science, and web development.
+      Outside of my studies, my interests range from skiing to reading. The last book I read was the Tempest. My favorite movie is the Departed. My favorite poem is Ozymandias (if you scroll over
       my name in the home screen a recording of the poem will start playing). My favorite skier is Candide Thovex. I also play tennis, golf, and basketball.  </p>
     </div>
     <div id="profilepic">
