--- a/exp.html
+++ b/exp.html
@@ -37,7 +37,7 @@
       <div class="first-exp">
         <div class="exp-description">
           <h2><strong>Stottler Henke Associates:</strong></h2>
-          <h3>Incoming Artificial Intelligence Development Intern for Summer 2021</h3>
+          <h3>Artificial Intelligence Development Intern/h3>
           <ul>
             <li>Assisting in development of prototype and operational software systems that employ artificial intelligence technologies.</li>
             <li>Contributing to research, design, implementation, coding, testing, debugging, and subsequent deployment of the system.</li>
@@ -55,8 +55,8 @@
           <h2><strong>UC Berkeley:</strong></h2>
           <h3>Electrical Engineering and Computer Science, 2022</h3>
           <ul>
-            <li>GPA: 3.79</li>
-            <li>Classes: Algorithms, Machine Learning, Artificial Intelligence, Computer Secutrity, Data Science</li>
+            <li>GPA: 3.81</li>
+            <li>Classes: Operating Systems, Optimization Models, Algorithms, Machine Learning, Artificial Intelligence, Computer Secutrity, Data Science</li>
             <li>Tutor students 1 on 1 for subjects such as Data Structures, Data Science, Linear Algebra, etc.</li>
             <li>Python, Java, Go, C, SQL, Lisp, JavaScript, HTML/CSS</li>
           </ul>        </div>
