--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           <p onmouseover="PlaySound('mySound')" onmouseout="StopSound('mySound')">Arthur Goldblatt</p>
           <audio id='mySound' src='./Ozymandias.ogg'/>
       </div>
-      <p>and this is my personal website.</p>
+      <!-- <p>and this is my personal website.</p> -->
     </div>
   </div>
 
