--- a/exp.html
+++ b/exp.html
@@ -37,7 +37,7 @@
       <div class="first-exp">
         <div class="exp-description">
           <h2><strong>Stottler Henke Associates:</strong></h2>
-          <h3>Artificial Intelligence Development Intern/h3>
+          <h3>Artificial Intelligence Development Intern</h3>
           <ul>
             <li>Assisting in development of prototype and operational software systems that employ artificial intelligence technologies.</li>
             <li>Contributing to research, design, implementation, coding, testing, debugging, and subsequent deployment of the system.</li>
